[package]
name = "rust_review"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
rlp = "0.5.1"
rand = "0.8.5"
regex = "1.6.0"
dirs = "4.0.0"
once_cell = "1.15.0"
ethereum-types = "0.14.0"
num256 = "0.3.5"